fixed css on mobile

--- a/tomdougiamas/static/css/nav.scss
+++ b/tomdougiamas/static/css/nav.scss
@@ -46,7 +46,7 @@
 
 .row-nav > div {
   font-size: 3rem;
-  height: 60%;
+  height: 25%;
   width: 45vw;
   border-radius: 3rem;
   transition: transform 0.2s;
@@ -127,4 +127,3 @@
   transform: scale(1.05);
   background-position: -60rem 0;
 }
-
